<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="ballot_logo">Ballot Logo</string>
    <string name="find_representative">Find My Representatives</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="voting_location">Voting Location</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="election_information">Election Information</string>
    <string name="correspondence_address">Correspondence Address</string>
    <string name="my_representatives">My Representatives</string>
    <string name="use_my_location">Use My Location</string>
    <string name="zip_code">Zip Code</string>
    <string name="city">City</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="representative_search">Representative Search</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="representative_image">Representative image</string>

</resources>
