<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motion_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_representative_scene">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/representative_form_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/search_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/representative_search"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/address_line_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_line_1"
                android:maxLines="1"
                android:text="@{viewModel.address.line1}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_title" />

            <EditText
                android:id="@+id/address_line_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_line_2"
                android:text="@={viewModel.address.line2}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_line_1" />

            <EditText
                android:id="@+id/city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:text="@={viewModel.address.city}"
                app:layout_constraintEnd_toStartOf="@id/state"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_line_2" />

            <Spinner
                android:id="@+id/state"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:entries="@array/states"
                app:layout_constraintBottom_toBottomOf="@id/city"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/city"
                app:layout_constraintTop_toTopOf="@id/city"
                app:stateValue="@{viewModel.address.state}" />

            <EditText
                android:id="@+id/zip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/zip_code"
                android:text="@={viewModel.address.zip}"
                app:layout_constraintBottom_toTopOf="@+id/button_search"
                app:layout_constraintEnd_toEndOf="@id/city"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/city" />

            <Button
                android:id="@+id/button_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimary"
                android:onClick="@{() -> viewModel.getRepresentatives()}"
                android:text="@string/find_representative"
                app:layout_constraintBottom_toTopOf="@+id/button_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/zip" />

            <Button
                android:id="@+id/button_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimary"
                android:text="@string/use_my_location"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_search" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/representative_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_representatives"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/representative_form_layout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/representatives_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/representative_title" />

    </androidx.constraintlayout.motion.widget.MotionLayout>

</layout>