<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="@{viewModel.voterInfo == null ? View.GONE : View.VISIBLE}">

        <ProgressBar
            apiStatus="@{viewModel.status}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/default_padding"
            android:singleLine="true"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{viewModel.voterInfo.election.name}"
            app:titleTextColor="@color/white"
            tools:title="ABC YEY" />

        <TextView
            android:id="@+id/election_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            android:text="@{viewModel.voterInfo.election.electionDay.toString()}"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            tools:text="12 November 2055" />

        <TextView
            android:id="@+id/state_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/election_date" />

        <TextView
            android:id="@+id/state_locations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.navigateToStateLocations()}"
            android:text="@string/voting_location"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_header" />

        <TextView
            android:id="@+id/state_ballot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.navigateToBallot()}"
            android:text="@string/ballot_information"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_locations" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="state_correspondence_header,address" />

        <TextView
            android:id="@+id/state_correspondence_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correspondence_address"
            android:textStyle="bold"
            android:textSize="14sp"
            android:visibility="@{viewModel.voterInfo.state.get(0).electionAdministrationBody.correspondenceAddress.toFormattedString().empty ? View.GONE : View.VISIBLE}"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_ballot" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.voterInfo.state.get(0).electionAdministrationBody.correspondenceAddress.toFormattedString()}"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header" />

        <Button
            android:id="@+id/follow_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="@{() -> viewModel.followElection()}"
            android:text="@{viewModel.isSavedElection ? @string/unfollow_election : @string/follow_election}"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>